2002-11-25 Ronald Oussoren <oussoren@cistron.nl>
	* Examples/{TableModel, CurrencyConverter, Todo}:
	  - Use NibClassBuilder module
	  - Use bundlebuilder module
	* Lib/objc/builder.py: Remove, no longer used

2002-11-22 Ronald Oussoren <oussoren@cistron.nl>
	* Examples/TableModel2/main.m: Set PYTHONPATH in the environment of
	  the child
	* Import bundlebuilder.py and plistlib.py from MacPython
	* Remove Tools/mknibwrapper: It is no longer needed
	* Added scripts/nibclassbuilder, as suggested by Just van Rossum

2002-11-20 Ronald Oussoren <oussoren@cistron.nl>
	Translated a number of names to a more Cocoa like syntax:
	* objc.lookup_class -> objc.lookUpClass
	* objc.class_list -> objc.getClassList

2002-11-18 Ronald Oussoren <oussoren@cistron.nl>
	* Doc/classes.txt: new file documenting how classes work
	* Lib/objc: Reformatted (4-space indent) and remove superfluos 
	  whitespace

2002-11-17  Bill Bumgarner  <bbum@codefab.com>

	* Normalize whitespace
	* allow extractClasses() to be called multiple times for one nib
	  (well it was allowed, but now less double work is performed)
	* renamed NibClassBuilder to _NibClassBuilder: AutoBaseClass is
	  not the way it's done.
	* added module doc string and variaus method doc strings
	* renamed loadClassesEtc. to extractClasses(), has a signature
	  is as discussed on the list (ie. can parse nibs by name or by
	  path)
	* Changed name of NibLoader to NibClassBuilder

	[Changes from Just van Rossum -- bbum acting as proxy because
	Just's sourceforge account is broken]

2002-11-15  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a minor bug in NibLoader.py when specifying NIBs without
	the .nib extension

2002-11-15 Ronald Oussoren <oussoren@cistron.nl>
	- Modules/objc: Remove sel_class_method and sel_allocator from
	  selector objects, and introduce a sel_flags.
	- Modules/objc/selector.m: Add Python visible attributes that allow
	  reflection to access more information about selectors/methods.